first draft of getting started

--- a/src/tests/energies.ipynb
+++ b/src/tests/energies.ipynb
@@ -375,22 +375,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.5344902 , 0.71841374, 0.48846058, 0.4714311 , 0.6100728 ])"
+       "array([0.93504088, 0.90081559, 0.93130413, 0.9501653 , 0.92094225])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.matmul(A,np.squeeze(x0))\n"
+    "from network_control.metrics import modal_control\n",
+    "\n",
+    "ac = modal_control(A)\n",
+    "ac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.729507111180988e-15"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x0 = np.random.rand(5,1)\n",
+    "xf = np.random.rand(5,1)\n",
+    "T = 5\n",
+    "x, u, n_err = minimum_energy(A,T,B,x0,xf)\n",
+    "n_err"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1806792811420392e-07"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B_sparse = np.zeros((5,5))\n",
+    "B_sparse[0,0] = 1\n",
+    "x, u, n_err = minimum_energy(A,T,B_sparse,x0,xf)\n",
+    "n_err"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.874675925196695e-14"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rho = 1\n",
+    "S = np.eye(5)\n",
+    "x, u, n_err = optimal_energy(A,T,B,x0,xf,rho,S)\n",
+    "n_err\n"
    ]
   }
  ],
