checked (n,1) and (n,) states

--- a/src/tests/energies.ipynb
+++ b/src/tests/energies.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.6703501887823644e-13"
+       "1.2672811856942417e-13"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
    "source": [
     "B = np.eye(n)\n",
     "S = np.eye(n)\n",
-    "x0 = np.random.rand(n,1)\n",
+    "x0 = np.random.rand(n,) # this, as well as (n,1) should work\n",
     "xf = np.random.rand(n,1)\n",
     "T = 5\n",
     "rho=1\n",
@@ -140,16 +140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.6370302663140594e-11"
+       "1.1650669250471364e-11"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
     "U = np.zeros((5,20)) # the input to the system\n",
     "U[:,0] = 1# impulse, 1 energy at the first time point\n",
     "B = np.eye(5)\n",
-    "x0 = np.ones((5,1))\n",
+    "x0 = np.ones((5,))\n",
     "x = sim_state_eq( A, B, x0, U, 'continuous')\n",
     "fig,ax = plt.subplots(1,1, figsize=(6,6))\n",
     "ax.plot(np.squeeze(x.T))\n",
@@ -616,17 +616,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1916886312340582e-05"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# sparse B\n",
-    "     >>> B_sparse = np.zeros((5,5))\n",
-    "     >>> B_sparse[0,0] = 1\n",
-    "     >>> x, u, n_err = minimum_input(A_cont,T,B_sparse,x0,xf)\n",
-    "     >>> n_err\n",
+    "B_sparse = np.zeros((5,5))\n",
+    "B_sparse[0,0] = 1\n",
+    "x, u, n_err = minimum_input(A_cont,T,B_sparse,x0,xf)\n",
+    "n_err\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1406708439148.7031"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from network_control.energies import integrate_u\n",
     "\n",
-    "     1.1806792811420392e-07"
+    "energy = integrate_u(u)\n",
+    "np.mean(energy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.4341274590567305e-13"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from network_control.energies import optimal_input\n",
+    "\n",
+    "# new parameters\n",
+    "rho = 1\n",
+    "S = np.eye(5)\n",
+    "x, u, n_err = optimal_input(A_cont,T,B,x0,xf,rho,S)\n",
+    "n_err"
    ]
   }
  ],
