--- a/docs/pages/examples/ieeg_stim_optimal.ipynb
+++ b/docs/pages/examples/ieeg_stim_optimal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,9 @@
     "import scipy as sp\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
+    "%matplotlib inline\n",
     "np.random.seed(0)"
    ]
   },
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +40,7 @@
        "dict_keys(['__header__', '__version__', '__globals__', 'Electrode_ROI', 'Post_Freq_State', 'Post_Stim_Prob', 'Pre_Freq_State', 'Pre_Stim_Prob', 'Stim_Amp', 'Stim_Duration', 'Stim_Freq', 'Stim_Loc_Idx', 'Struct_Adj'])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,15 +48,15 @@
    "source": [
     "# load data\n",
     "workdir = '/Users/stiso/Documents/Code/test_data/'\n",
-    "stim = ['R1170J_1.PS2_1_set1', 'R1173J.PS2_1_set1', 'R1170J_1.sham_PS2_1_set2']\n",
-    "sham = ['R1173J.sham_PS2_1_set1', 'R1170J_1.sham_PS2_1_set1', 'R1170J_1.sham_PS2_1_set2'];\n",
+    "subj = ['R1170J_1.PS2_1_set1', 'R1173J.PS2_1_set1', 'R1170J_1.PS2_1_set2',\n",
+    "        'R1173J.sham_PS2_1_set1', 'R1170J_1.sham_PS2_1_set1', 'R1170J_1.sham_PS2_1_set2'];\n",
     "dat = sio.loadmat(f'{workdir}Trajectory_Data.{subj[0]}.mat')\n",
     "dat.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Normalizing A for a continuous-time system\n",
+      "Normalizing A for a continuous-time system\n",
       "Normalizing A for a continuous-time system\n"
      ]
     }
@@ -102,128 +106,130 @@
     "# intiialize final data strcutre\n",
     "energies = pd.DataFrame(columns=['energy', 'condition', 'subject', 'trial', 'error'])\n",
     "\n",
-    "for i,s in enumerate(stim):\n",
+    "for i,s in enumerate(subj):\n",
     "    # load in data\n",
-    "    stim_dat = sio.loadmat(f'{workdir}Trajectory_Data.{s}.mat')\n",
-    "    sham_dat = sio.loadmat(f'{workdir}Trajectory_Data.{sham[i]}.mat')\n",
+    "    dat = sio.loadmat(f'{workdir}Trajectory_Data.{s}.mat')\n",
+    "    \n",
+    "    # stim or sham?\n",
+    "    if 'sham' in s:\n",
+    "        cond = 'sham'\n",
+    "    else:\n",
+    "        cond = 'stim'\n",
     "    \n",
     "    # subject specific constants\n",
-    "    # number of stim trials\n",
-    "    nTrial = np.size(stim_dat['Post_Stim_Prob'])\n",
+    "    # number of stim trials for this set\n",
+    "    nTrial = np.size(dat['Post_Freq_State'],0)\n",
     "    # number of nodes/regions in the atlas we are using\n",
-    "    nROI = np.size(stim_dat['Post_Freq_State'],1) \n",
+    "    nROI = np.size(dat['Post_Freq_State'],1) \n",
     "    # number of bands\n",
-    "    nFreq = np.size(stim_dat['Post_Freq_State'],2)\n",
+    "    nFreq = np.size(dat['Post_Freq_State'],2)\n",
     "    # these are the regions with contacts\n",
-    "    elec_idx = np.sum(stim_dat['Post_Freq_State'][:,:,0],0) != 0 \n",
+    "    elec_idx = np.sum(dat['Post_Freq_State'][:,:,0],0) != 0 \n",
     "    ROI_idx = [not x for x in elec_idx]\n",
     "    # number of contacts\n",
     "    nElec = sum(elec_idx)\n",
     "    # stim contacts\n",
-    "    stim_idx = [x[0] for x in stim_dat['Stim_Loc_Idx'][0][0]] \n",
+    "    stim_idx = [x[0][0] for x in dat['Stim_Loc_Idx']]\n",
+    "\n",
     "    # which regions we want to constrain the state of\n",
     "    S = np.eye(nROI)\n",
     "    \n",
     "    # scale A matrix (continuous)\n",
     "    # this variable will be the same for both datasets\n",
-    "    A = stim_dat['Struct_Adj'] \n",
-    "    matrix_normalization(A, c=gamma, version='continuous')\n",
-    "    \n",
-    "    # set B matrix - ultimate goal is to have the majority of input be at the stim elecs\n",
-    "    # first, we set small input everywhere\n",
-    "    B = np.eye(nROI) * np.random.normal(loc=B_mu, scale=B_sigma, size=(1, nROI)) \n",
-    "    # then we add 0s to all the areas whos activity we know\n",
-    "    B[elec_idx,elec_idx] = 0 \n",
-    "    # then, we add big numbers to the stim elecs\n",
-    "    B[stim_idx,stim_idx] = np.eye(np.size(stim_idx))\n",
-    "    \n",
+    "    A = dat['Struct_Adj'] \n",
+    "    A = matrix_normalization(A, c=gamma, version='continuous')\n",
+    "\n",
     "    # get optimal input and trajectory for each trial\n",
+    "    \n",
     "    for t in range(nTrial):\n",
+    "        # get stim contacts\n",
+    "        e = stim_idx[t]\n",
+    "        \n",
+    "        # set B matrix - ultimate goal is to have the majority of input be at the stim elecs\n",
+    "        # first, we set small input everywhere\n",
+    "        B = np.eye(nROI) * np.random.normal(loc=B_mu, scale=B_sigma, size=(1, nROI)) \n",
+    "        # then we add 0s to all the areas whos activity we know\n",
+    "        B[elec_idx,elec_idx] = 0 \n",
+    "        # then, we add big numbers to the stim elecs\n",
+    "        for c in e:\n",
+    "            B[c,c] = 1\n",
+    "\n",
     "        # get states\n",
-    "        x0_stim = np.squeeze(stim_dat['Pre_Freq_State'][t,:,:])\n",
-    "        x0_sham = np.squeeze(stim_dat['Post_Freq_State'][t,:,:])\n",
-    "        \n",
-    "        xf_stim = np.squeeze(sham_dat['Pre_Freq_State'][t,:,:])\n",
-    "        xf_sham = np.squeeze(sham_dat['Post_Freq_State'][t,:,:])\n",
-    "        \n",
+    "        x0 = np.squeeze(dat['Pre_Freq_State'][t,:,:])\n",
+    "        xf = np.squeeze(dat['Post_Freq_State'][t,:,:])\n",
+    "\n",
     "        # add 1s to regions without elecs\n",
-    "        x0_stim[ROI_idx,:] = 1\n",
-    "        x0_sham[ROI_idx,:] = 1\n",
-    "        \n",
-    "        xf_stim[ROI_idx,:] = 1\n",
-    "        xf_sham[ROI_idx,:] = 1\n",
-    "        \n",
+    "        x0[ROI_idx,:] = 1\n",
+    "        xf[ROI_idx,:] = 1\n",
+    "\n",
     "        # concatenate across frequency bands\n",
-    "        u_stim = np.zeros((nROI,nTime,nFreq))\n",
-    "        u_sham = np.zeros((nROI,nTime,nFreq))\n",
-    "        err_stim = np.zeros((1,nFreq))\n",
-    "        err_sham = np.zeros((1,nFreq))\n",
+    "        u = np.zeros((nROI,nTime,nFreq))\n",
+    "        err = np.zeros((1,nFreq))\n",
     "        for f in range(nFreq):\n",
-    "            _,curr_u_stim, curr_err_stim = optimal_input(A,T,B,x0_stim[:,f],xf_stim[:,f],rho,S)\n",
-    "            _,curr_u_sham, curr_err_sham = optimal_input(A,T,B,x0_sham[:,f],xf_sham[:,f],rho,S)\n",
-    "            \n",
-    "            u_stim[:,:,f] = curr_u_stim.T\n",
-    "            u_sham[:,:,f] = curr_u_sham.T\n",
-    "            err_stim[:,f] = curr_err_stim\n",
-    "            err_stim[:,f] = curr_err_stim\n",
+    "            _,curr_u, curr_err = optimal_input(A,T,B,x0[:,f],xf[:,f],rho,S)\n",
+    "\n",
+    "            curr_u = curr_u.T\n",
+    "            err[:,f] = curr_err\n",
+    "\n",
+    "            u[:,:,f] = curr_u\n",
     "        \n",
     "        # get summary of optimal input\n",
     "        # we incorporated the B matrix into our input summary because of the weighting\n",
     "        # we use the term energy to be consistent with other literature, but in some sense this is a different summary statistic\n",
-    "        eng_stim = np.mean(np.linalg.norm(B*u_stim))/1000\n",
-    "        eng_sham = np.mean(np.linalg.norm(B*u_sham))/1000\n",
-    "        # average err over frequencies\n",
-    "        err_stim = np.mean(err_stim)\n",
-    "        err_stim = np.mean(err_sham)\n",
-    "        \n",
-    "        # add to data frame\n",
-    "        curr_stim = pd.DataFrame(energy=eng_stim, condition='stim', subject=s, trial=t, error=err_stim)\n",
-    "        curr_sham = pd.DataFrame(energy=eng_stim, condition='stim', subject=s, trial=t, error=err_stim)\n",
-    "        energies = pd.concat([energies,curr_stim,curr_sham])\n",
-    "    \n",
-    "    "
+    "        u = sum(np.linalg.norm(u.T*np.diag(B),axis=(0,2)))/nTime\n",
+    "\n",
+    "        # average over frequencies\n",
+    "        err = np.mean(err)\n",
+    "\n",
+    "\n",
+    "        # add to data frame (averaged over freqs)\n",
+    "        curr = pd.DataFrame({'energy':[np.mean(u)], \n",
+    "                                  'condition':[cond], \n",
+    "                                  'subject':[s.replace('sham_','')], \n",
+    "                                  'trial':[t], \n",
+    "                                  'error':[err]})\n",
+    "        energies = pd.concat([energies,curr])\n",
+    "\n",
+    "energies['log_eng'] = np.log(energies['energy']) \n",
+    "energies['log_err'] = np.log(energies['error'])   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we get similar errors for each condition, so any differences are not being driven by having more accurate calculations for stim vs sham"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(463, 8)"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.shape(x0_sham)"
+    "fig,ax = plt.subplots(1,1,figsize=(8,6))\n",
+    "sns.histplot(energies, x='log_err', hue='condition', stat='probability', ax=ax)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([435], dtype=uint16)"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "k = [x[0][0] for x in stim_dat['Stim_Loc_Idx']]\n",
-    "k[0]"
+    "# this plot will look a little different from the original paper because we're plotting CI instead of SE\n",
+    "fig,ax = plt.subplots(1,1,figsize=(8,6))\n",
+    "sns.pointplot(data=energies, y='log_eng', x = 'condition', hue = 'subject',  ax=ax, size=200)\n",
+    "#ax.set(yscale='log')\n",
+    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
