--- a/docs/pages/examples/ieeg_stim_optimal.ipynb
+++ b/docs/pages/examples/ieeg_stim_optimal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
+    "sns.set_context('poster')\n",
     "np.random.seed(0)"
    ]
   },
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +41,7 @@
        "dict_keys(['__header__', '__version__', '__globals__', 'Electrode_ROI', 'Post_Freq_State', 'Post_Stim_Prob', 'Pre_Freq_State', 'Pre_Stim_Prob', 'Stim_Amp', 'Stim_Duration', 'Stim_Freq', 'Stim_Loc_Idx', 'Struct_Adj'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,15 +49,39 @@
    "source": [
     "# load data\n",
     "workdir = '/Users/stiso/Documents/Code/test_data/'\n",
-    "subj = ['R1170J_1.PS2_1_set1', 'R1173J.PS2_1_set1', 'R1170J_1.PS2_1_set2',\n",
-    "        'R1173J.sham_PS2_1_set1', 'R1170J_1.sham_PS2_1_set1', 'R1170J_1.sham_PS2_1_set2'];\n",
+    "subj = ['R1067P.PS1_set1','R1051J.PS1_set1','R1051J.PS1_set2.1', 'R1030J.PS1_set1', 'R1124J_1.PS2_set2',\n",
+    "        'R1124J_1.PS2_set3','R1124J_1.PS2_set1', 'R1150J.PS2_set1','R1150J.PS2_set2','R1170J_1.PS2_1_set1',\n",
+    "        'R1170J_1.PS2_1_set2','R1067P.PS1_set1','R1067P.PS1_set2','R1068J.PS2_set1','R1068J.PS1_set2.1',\n",
+    "        'R1089P.PS2_set1','R1089P.PS2_set2','R1062J.PS1_set1','R1173J.PS2_1_set1','R1066P.PS1_set1'];\n",
     "dat = sio.loadmat(f'{workdir}Trajectory_Data.{subj[0]}.mat')\n",
     "dat.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['__header__', '__version__', '__globals__', 'ROI_target'])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = subj[0].split('_set')[0]\n",
+    "target = sio.loadmat(f'{workdir}targets/{prefix}.mat')\n",
+    "target.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Does it take more energy to get to post-stimulation state, or a  sham stimulation state?"
+    "#### Does it take more energy to get to a good, or bad memory state?"
    ]
   },
   {
@@ -95,6 +120,10 @@
      "text": [
       "Normalizing A for a continuous-time system\n",
       "Normalizing A for a continuous-time system\n",
+      "Normalizing A for a continuous-time system\n",
+      "Normalizing A for a continuous-time system\n",
+      "Normalizing A for a continuous-time system\n",
+      "Normalizing A for a continuous-time system\n",
       "Normalizing A for a continuous-time system\n"
      ]
     }
@@ -102,24 +131,20 @@
    "source": [
     "from network_control.utils import matrix_normalization\n",
     "from network_control.energies import optimal_input\n",
-    "\n",
     "# intiialize final data strcutre\n",
     "energies = pd.DataFrame(columns=['energy', 'condition', 'subject', 'trial', 'error'])\n",
     "\n",
     "for i,s in enumerate(subj):\n",
+    "    prefix = subj[0].split('_set')[0]\n",
     "    # load in data\n",
     "    dat = sio.loadmat(f'{workdir}Trajectory_Data.{s}.mat')\n",
-    "    \n",
-    "    # stim or sham?\n",
-    "    if 'sham' in s:\n",
-    "        cond = 'sham'\n",
-    "    else:\n",
-    "        cond = 'stim'\n",
+    "    target = sio.loadmat(f'{workdir}targets/{prefix}.mat')\n",
     "    \n",
     "    # subject specific constants\n",
     "    # number of stim trials for this set\n",
     "    nTrial = np.size(dat['Post_Freq_State'],0)\n",
-    "    # number of nodes/regions in the atlas we are using\n",
+    "    # number of nodes/regions in the atlas we are using - one of the complications of this project is that we \n",
+    "    # dont have iEEG/state data for every regions of the atlas\n",
     "    nROI = np.size(dat['Post_Freq_State'],1) \n",
     "    # number of bands\n",
     "    nFreq = np.size(dat['Post_Freq_State'],2)\n",
@@ -140,12 +165,14 @@
     "    A = matrix_normalization(A, c=gamma, version='continuous')\n",
     "\n",
     "    # get optimal input and trajectory for each trial\n",
-    "    \n",
+    "    # each participant has a \"good memory state\", as determined by a linear classifier trained on memory performance\n",
+    "    xf = target['ROI_target']\n",
+    "    # this will take a while\n",
     "    for t in range(nTrial):\n",
     "        # get stim contacts\n",
     "        e = stim_idx[t]\n",
     "        \n",
-    "        # set B matrix - ultimate goal is to have the majority of input be at the stim elecs\n",
+    "        # set sparse B matrix - ultimate goal is to have the majority of input be at the stim elecs\n",
     "        # first, we set small input everywhere\n",
     "        B = np.eye(nROI) * np.random.normal(loc=B_mu, scale=B_sigma, size=(1, nROI)) \n",
     "        # then we add 0s to all the areas whos activity we know\n",
@@ -156,11 +183,9 @@
     "\n",
     "        # get states\n",
     "        x0 = np.squeeze(dat['Pre_Freq_State'][t,:,:])\n",
-    "        xf = np.squeeze(dat['Post_Freq_State'][t,:,:])\n",
     "\n",
     "        # add 1s to regions without elecs\n",
     "        x0[ROI_idx,:] = 1\n",
-    "        xf[ROI_idx,:] = 1\n",
     "\n",
     "        # concatenate across frequency bands\n",
     "        u = np.zeros((nROI,nTime,nFreq))\n",
@@ -183,12 +208,12 @@
     "\n",
     "\n",
     "        # add to data frame (averaged over freqs)\n",
-    "        curr = pd.DataFrame({'energy':[np.mean(u)], \n",
-    "                                  'condition':[cond], \n",
-    "                                  'subject':[s.replace('sham_','')], \n",
-    "                                  'trial':[t], \n",
-    "                                  'error':[err]})\n",
-    "        energies = pd.concat([energies,curr])\n",
+    "        curr = pd.DataFrame({'energy':[np.mean(u)],\n",
+    "                             'initial_mem_state': dat['Pre_Stim_Prob'][0][t],\n",
+    "                             'subject':[s],\n",
+    "                             'trial':[t],\n",
+    "                             'error':[err]})\n",
+    "        energies = pd.concat([energies,curr],sort=False)\n",
     "\n",
     "energies['log_eng'] = np.log(energies['energy']) \n",
     "energies['log_err'] = np.log(energies['error'])   \n"
@@ -198,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we get similar errors for each condition, so any differences are not being driven by having more accurate calculations for stim vs sham"
+    "Especially since we aren't using a full control set (B), we should check that errors are small before advancing"
    ]
   },
   {
@@ -207,8 +232,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "energies['log_eng'] = np.log(energies['energy']) \n",
+    "energies['log_err'] = np.log(energies['error']) \n",
     "fig,ax = plt.subplots(1,1,figsize=(8,6))\n",
-    "sns.histplot(energies, x='log_err', hue='condition', stat='probability', ax=ax)\n"
+    "sns.histplot(energies, x='log_err', hue='subject', stat='probability', \n",
+    "             ax=ax, palette='Blues_r', legend=False)\n"
    ]
   },
   {
@@ -218,18 +246,17 @@
    "outputs": [],
    "source": [
     "# this plot will look a little different from the original paper because we're plotting CI instead of SE\n",
-    "fig,ax = plt.subplots(1,1,figsize=(8,6))\n",
-    "sns.pointplot(data=energies, y='log_eng', x = 'condition', hue = 'subject',  ax=ax, size=200)\n",
-    "#ax.set(yscale='log')\n",
+    "sns.lmplot(data=energies, y='log_eng', x = 'initial_mem_state', hue = 'subject', palette='Blues_r',\n",
+    "          height=8, aspect=3, legend=False)\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As we can see, for most participants, transitions to good memory states require more energy when stsarting from a poorer memory state. In the paper, we show that the initial memory state explains more variane than the Euclidean distance between states as well."
+   ]
   }
  ],
  "metadata": {
