updated import header

--- a/scripts/path_a_control_energy_nonbinary.ipynb
+++ b/scripts/path_a_control_energy_nonbinary.ipynb
@@ -8,9 +8,12 @@
     "# import\n",
     "import os\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import scipy as sp\n",
     "from scipy import stats\n",
+    "from scipy.spatial import distance\n",
     "from sklearn.cluster import KMeans\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# import plotting libraries\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,8 +27,10 @@
     "from network_control.energies import ComputeControlEnergy, integrate_u\n",
     "from network_control.energies import optimal_input as get_control_inputs\n",
     "from network_control.metrics import ave_control\n",
-    "from network_control.utils import matrix_normalization, convert_states_str2float, normalize_state\n",
-    "from network_control.plotting import roi_to_vtx"
+    "from network_control.utils import matrix_normalization, convert_states_str2float, normalize_state, get_null_p\n",
+    "from network_control.plotting import roi_to_vtx, null_plot\n",
+    "\n",
+    "from null_models.geomsurr import geomsurr"
    ],
    "metadata": {
     "collapsed": false,
@@ -506,7 +511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2718.0096217104956\n"
+      "2718.0096217104947\n"
      ]
     }
    ],
