added surface_plot function

--- a/scripts/path_a_control_energy_binary.ipynb
+++ b/scripts/path_a_control_energy_binary.ipynb
@@ -34,8 +34,7 @@
     "from network_control.energies import optimal_input as get_control_inputs\n",
     "from network_control.metrics import ave_control\n",
     "from network_control.utils import matrix_normalization, convert_states_str2float, normalize_state, get_null_p\n",
-    "from network_control.plotting import roi_to_vtx, null_plot\n",
-    "\n",
+    "from network_control.plotting import roi_to_vtx, null_plot, surface_plot\n",
     "from null_models.geomsurr import geomsurr"
    ]
   },
