--- a/scripts/get_control_inputs.ipynb
+++ b/scripts/get_control_inputs.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -263,7 +263,7 @@
     "S = np.zeros((n_nodes, n_nodes))  # x and u constrained over all nodes  <-- NOTE CHANGE\n",
     "\n",
     "# get the state trajectory (x) and the control inputs (u)\n",
-    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)  # <-- NOTE REMOVAL OF RHO\n",
+    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, S=S)  # <-- NOTE REMOVAL OF RHO\n",
     "node_energy = integrate_u(u)\n",
     "energy = np.sum(node_energy)\n",
     "\n",
