added a couple more examples

--- a/scripts/get_control_inputs.ipynb
+++ b/scripts/get_control_inputs.ipynb
@@ -11,29 +11,15 @@
     "# import\n",
     "import os\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import scipy as sp\n",
-    "from scipy import stats\n",
-    "from scipy.spatial import distance\n",
-    "from sklearn.cluster import KMeans\n",
-    "from tqdm import tqdm\n",
     "\n",
     "# import plotting libraries\n",
     "import matplotlib.pyplot as plt\n",
     "plt.rcParams.update({'font.size': 10})\n",
     "plt.rcParams['svg.fonttype'] = 'none'\n",
-    "import seaborn as sns\n",
-    "from nilearn import datasets\n",
-    "from nilearn import plotting\n",
     "\n",
     "# import network_control functions\n",
     "from network_control.energies import integrate_u, get_control_inputs\n",
-    "from network_control.pipelines import ComputeControlEnergy, ComputeOptimizedControlEnergy\n",
-    "from network_control.metrics import ave_control\n",
-    "from network_control.utils import matrix_normalization, convert_states_str2float, normalize_state, normalize_weights, \\\n",
-    "    get_null_p, get_fdr_p\n",
-    "from network_control.plotting import roi_to_vtx, null_plot, surface_plot\n",
-    "from null_models.geomsurr import geomsurr"
+    "from network_control.utils import matrix_normalization, convert_states_str2float, normalize_state"
    ]
   },
   {
@@ -131,10 +117,14 @@
     "# Get energy\n",
     "\n",
     "By default, we compute $x$ and $u$ using the following settings:\n",
-    "1. Time system: continuous\n",
-    "2. Time horizon: 1\n",
-    "3. Control set: uniform full\n",
-    "4. Amplitude of $x$ and $u$ are constrained (i) toward zero activity; (ii) equally between $x$ and $u$; and (iii) across all nodes\n",
+    "1. Time system: continuous (*system*)\n",
+    "2. Time horizon: 1 (*T*)\n",
+    "3. Control set: uniform full (*B*)\n",
+    "4. Amplitude of $x$ and $u$ are constrained toward zero (*xr*)\n",
+    "5. The constraints on $x$ are equal to the constraints on $u$ (*rho*)\n",
+    "6. The constraints on $x$ are applied to all system nodes (*S*)\n",
+    "\n",
+    "Note, terms in brackets represent the variables that govern each of these settings\n",
     "\n",
     "You can compute $x$ and $u$ using the above settings like so:"
    ],
@@ -164,7 +154,7 @@
     "T = 1  # time horizon\n",
     "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
     "rho = 1  # x and u constrained equally\n",
-    "S = np.eye(n_nodes)  # x and u constrained over all nodes\n",
+    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
     "\n",
     "# get the state trajectory (x) and the control inputs (u)\n",
     "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
@@ -183,7 +173,23 @@
   {
    "cell_type": "markdown",
    "source": [
-    "You want to use a discrete time system instead?"
+    "## Variations\n",
+    "\n",
+    "All of the below code cells represent variations to the above default settings. Changes are noted in comments."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### You want to relax the constraints on $x$?\n",
+    "\n",
+    "Note, constraints on $u$ cannot be change; the control signals are always minimized in the cost function"
    ],
    "metadata": {
     "collapsed": false,
@@ -200,18 +206,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "energy: 0.51\n"
+      "energy: 2719.96\n"
      ]
     }
    ],
    "source": [
-    "system = 'discrete'  # choose time system  <-- NOTE CHANGE\n",
+    "system = 'continuous'  # choose time system\n",
     "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
     "B = np.eye(n_nodes)  # uniform full control set\n",
-    "T = 10  # time horizon\n",
+    "T = 1  # time horizon\n",
     "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
-    "rho = 1  # x and u constrained equally\n",
-    "S = np.eye(n_nodes)  # x and u constrained over all nodes\n",
+    "rho = 0.5  # x constrained less than u  <-- NOTE CHANGE.\n",
+    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
     "\n",
     "# get the state trajectory (x) and the control inputs (u)\n",
     "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
@@ -230,9 +236,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "You want to only constrain u and not x?\n",
+    "### You want to only constrain u and not x?\n",
     "\n",
-    "Note, this is what we refer to as 'minimum control energy', the energy where only the control signals are constrained"
+    "Note, this is what we refer to as *minimum control energy*; the energy where only the control signals are constrained"
    ],
    "metadata": {
     "collapsed": false,
@@ -243,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -260,10 +266,104 @@
     "T = 1  # time horizon\n",
     "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
     "#  <-- NOTE REMOVAL OF RHO\n",
-    "S = np.zeros((n_nodes, n_nodes))  # x and u constrained over all nodes  <-- NOTE CHANGE\n",
+    "S = np.zeros((n_nodes, n_nodes))  # x is *not* constrained  <-- NOTE CHANGE\n",
     "\n",
     "# get the state trajectory (x) and the control inputs (u)\n",
     "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, S=S)  # <-- NOTE REMOVAL OF RHO\n",
+    "node_energy = integrate_u(u)\n",
+    "energy = np.sum(node_energy)\n",
+    "\n",
+    "print('energy: {0:.2f}'.format(energy))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### You want to constrain $x$ and $u$ toward the target state instead of toward zero?"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "energy: 2640.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "system = 'continuous'  # choose time system\n",
+    "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
+    "B = np.eye(n_nodes)  # uniform full control set\n",
+    "T = 1  # time horizon\n",
+    "xr = xf  # x and u constrained toward target start  <-- NOTE CHANGE\n",
+    "rho = 1  # x and u constrained equally\n",
+    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "\n",
+    "# get the state trajectory (x) and the control inputs (u)\n",
+    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
+    "node_energy = integrate_u(u)\n",
+    "energy = np.sum(node_energy)\n",
+    "\n",
+    "print('energy: {0:.2f}'.format(energy))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### You want to use a discrete time system instead?\n",
+    "\n",
+    "Note, time horizon must be >1 for discrete time systems. In a discrete system, time is broken into\n",
+    "discrete steps of 1, which means T=1 would be only 1 time step."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "energy: 0.51\n"
+     ]
+    }
+   ],
+   "source": [
+    "system = 'discrete'  # choose time system  <-- NOTE CHANGE\n",
+    "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
+    "B = np.eye(n_nodes)  # uniform full control set\n",
+    "T = 10  # time horizon  <-- NOTE CHANGE. TIME HORIZON MUST BE >1 FOR DISCRETE TIME SYSTEMS\n",
+    "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
+    "rho = 1  # x and u constrained equally\n",
+    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "\n",
+    "# get the state trajectory (x) and the control inputs (u)\n",
+    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
     "node_energy = integrate_u(u)\n",
     "energy = np.sum(node_energy)\n",
     "\n",
