renamed convert_states_str2float to convert_states_str2int

--- a/scripts/get_control_inputs.ipynb
+++ b/scripts/get_control_inputs.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "# import network_control functions\n",
     "from network_control.energies import integrate_u, get_control_inputs\n",
-    "from network_control.utils import matrix_normalization, convert_states_str2float, normalize_state"
+    "from network_control.utils import matrix_normalization, convert_states_str2int, normalize_state"
    ]
   },
   {
@@ -91,7 +91,7 @@
     "                                dtype=str))\n",
     "\n",
     "# use list of system names to create states\n",
-    "states, state_labels = convert_states_str2float(system_labels)\n",
+    "states, state_labels = convert_states_str2int(system_labels)\n",
     "\n",
     "# extract initial state\n",
     "x0 = states == state_labels.index('Vis')\n",
