--- a/scripts/path_b_ave_ctrb.ipynb
+++ b/scripts/path_b_ave_ctrb.ipynb
@@ -27,7 +27,7 @@
     "from network_control.energies import integrate_u, get_control_inputs\n",
     "from network_control.pipelines import ComputeControlEnergy, ComputeOptimizedControlEnergy\n",
     "from network_control.metrics import ave_control\n",
-    "from network_control.utils import matrix_normalization, convert_states_str2float, normalize_state, normalize_weights, \\\n",
+    "from network_control.utils import matrix_normalization, convert_states_str2int, normalize_state, normalize_weights, \\\n",
     "    get_null_p, get_fdr_p\n",
     "from network_control.plotting import roi_to_vtx, null_plot, surface_plot, add_module_lines\n",
     "from null_models.geomsurr import geomsurr"
