added null code for OHBM abstract

--- a/scripts/path_a_control_energy_nonbinary.ipynb
+++ b/scripts/path_a_control_energy_nonbinary.ipynb
@@ -333,7 +333,8 @@
     "S = np.eye(n_nodes) # nodes in state trajectory to be constrained\n",
     "\n",
     "# get the state trajectory (x) and the control inputs (u)\n",
-    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, rho=rho, S=S)"
+    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf,\n",
+    "                                 system=system, rho=rho, S=S)"
    ],
    "metadata": {
     "collapsed": false,
@@ -523,6 +524,128 @@
     "                     fsaverage=fsaverage, order='lr',\n",
     "                     cmap='coolwarm', cblim=[vmax, vmin])\n",
     "    f.savefig(os.path.join(resultsdir, fig_label), dpi=600, bbox_inches='tight', pad_inches=0.01)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Null network models"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            vox_x  vox_y  vox_z\n",
+      "node_names                     \n",
+      "LH_Vis_1      121    149     69\n",
+      "LH_Vis_2      123    174     65\n",
+      "LH_Vis_3      143    166     70\n",
+      "LH_Vis_4      107    164     74\n",
+      "LH_Vis_5      124    192     66\n"
+     ]
+    }
+   ],
+   "source": [
+    "# null networks\n",
+    "spatial_centroids = pd.read_csv(os.path.join(datadir, 'pnc_schaefer200_centroids.csv'))  # load coordinates of nodes\n",
+    "spatial_centroids.set_index('node_names', inplace=True)\n",
+    "print(spatial_centroids.head())\n",
+    "\n",
+    "D = distance.pdist(spatial_centroids, 'euclidean')  # get euclidean distances between nodes\n",
+    "D = distance.squareform(D)  # reshape to square matrix"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "run = False\n",
+    "if run:\n",
+    "    # extract visual cluster is initial state\n",
+    "    x0 = centroids[1, :]\n",
+    "    # extract default mode cluster as target state\n",
+    "    xf = centroids[4, :]\n",
+    "\n",
+    "    x0 = normalize_state(x0)  # normalize\n",
+    "    xf = normalize_state(xf)  # normalize\n",
+    "\n",
+    "    # get true control energy\n",
+    "    _, u, _ = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf,\n",
+    "                                 system=system, rho=rho, S=S)  # get u\n",
+    "    E = integrate_u(u)  # integrate u\n",
+    "    E = np.sum(E)  # get energy\n",
+    "\n",
+    "    # run permutation\n",
+    "    n_perms = 5000  # number of permutations\n",
+    "\n",
+    "    # containers for null distributions\n",
+    "    energy_null_sp = np.zeros(n_perms)\n",
+    "    energy_null_ssp = np.zeros(n_perms)\n",
+    "\n",
+    "    for i in tqdm(np.arange(n_perms)):\n",
+    "        _, Wsp, Wssp = geomsurr(W=A, D=D, seed=i)  # rewire adjacency matrix using geomsurr\n",
+    "        # Wsp is A rewired while preserving spatial embedding and the strength distribution\n",
+    "        # Wssp is A rewired while preserving spatial embedding and the strength sequence\n",
+    "        # this python implementation is included with our toolbox, but if you use these nulls\n",
+    "        # in your own work, please cite:\n",
+    "        #       Roberts et al. NeuroImage (2016), doi:10.1016/j.neuroimage.2015.09.009\n",
+    "\n",
+    "        Wsp = matrix_normalization(Wsp, system=system)  # normalize rewired adjacency matrix\n",
+    "        _, u, _ = get_control_inputs(A_norm=Wsp, T=T, B=B, x0=x0, xf=xf,\n",
+    "                                     system=system, rho=rho, S=S)  # get u\n",
+    "        e = integrate_u(u)  # integrate null u\n",
+    "        energy_null_sp[i] = np.sum(e)  # store null energy\n",
+    "\n",
+    "        Wssp = matrix_normalization(Wssp, system=system)  # normalize rewired adjacency matrix\n",
+    "        _, u, _ = get_control_inputs(A_norm=Wssp, T=T, B=B, x0=x0, xf=xf,\n",
+    "                                     system=system, rho=rho, S=S)  # get u\n",
+    "        e = integrate_u(u)  # integrate null u\n",
+    "        energy_null_ssp[i] = np.sum(e)  # store null energy"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "run = False\n",
+    "if run:\n",
+    "    # plot\n",
+    "    f, ax = plt.subplots(1, 2, figsize=(7, 2))\n",
+    "    null_plot(observed=E, null=energy_null_sp,\n",
+    "              xlabel='energy null (space & str. dist.)', ax=ax[0])\n",
+    "    null_plot(observed=E, null=energy_null_ssp,\n",
+    "              xlabel='energy null (space & str. seq.)', ax=ax[1])\n",
+    "    f.tight_layout()\n",
+    "    f.savefig(os.path.join(resultsdir, 'energy_network_null.svg'), dpi=600, bbox_inches='tight', pad_inches=0.01)\n",
+    "    plt.show()"
    ],
    "metadata": {
     "collapsed": false,
