added null code

--- a/scripts/path_b_ave_ctrb.ipynb
+++ b/scripts/path_b_ave_ctrb.ipynb
@@ -278,7 +278,7 @@
     "run = False\n",
     "if run:\n",
     "    # run permutation\n",
-    "    n_perms = 10000  # number of permutations\n",
+    "    n_perms = 5000  # number of permutations\n",
     "\n",
     "    # container for null distribution\n",
     "    ac_null_ssp = np.zeros((n_perms, n_nodes))\n",
@@ -315,7 +315,7 @@
     "    for i in tqdm(np.arange(n_nodes)):\n",
     "        # version='standard' will calculate the number of times the null is larger than the observed value\n",
     "        # version='reverse' will calculate the number of times the null is smaller than the observed value\n",
-    "        p_vals_ssp[i] = get_null_p(ac[i], ac_null_ssp[:, i], version='reverse')\n",
+    "        p_vals_ssp[i] = get_null_p(ac[i], ac_null_ssp[:, i], version='standard')\n",
     "\n",
     "    p_vals_ssp = get_fdr_p(p_vals_ssp)  # correct p values for multiple comparisons\n",
     "\n",
@@ -340,7 +340,7 @@
    "source": [
     "if run:\n",
     "    # print(data[~np.isnan(data)])\n",
-    "    idx = np.where(data == data[~np.isnan(data)][1])[0][0]\n",
+    "    idx = np.where(data == data[~np.isnan(data)][0])[0][0]\n",
     "    print(p_vals_ssp[idx])\n",
     "    f, ax = plt.subplots(figsize=(3, 2))\n",
     "\n",
