--- a/scripts/path_a_control_energy_nonbinary.ipynb
+++ b/scripts/path_a_control_energy_nonbinary.ipynb
@@ -27,8 +27,8 @@
     "from network_control.energies import integrate_u, get_control_inputs\n",
     "from network_control.pipelines import ComputeControlEnergy, ComputeOptimizedControlEnergy\n",
     "from network_control.metrics import ave_control\n",
-    "from network_control.utils import matrix_normalization, convert_states_str2int, normalize_state, normalize_weights, \\\n",
-    "    get_null_p, get_fdr_p\n",
+    "from network_control.utils import matrix_normalization, convert_states_str2int, \\\n",
+    "    normalize_state, normalize_weights, get_null_p, get_fdr_p\n",
     "from network_control.plotting import roi_to_vtx, null_plot, surface_plot, add_module_lines\n",
     "from null_models.geomsurr import geomsurr"
    ],
