typo fix from Ivan

--- a/scripts/get_control_inputs.ipynb
+++ b/scripts/get_control_inputs.ipynb
@@ -56,8 +56,8 @@
    ],
    "source": [
     "# directory where data is stored\n",
-    "datadir = '/Users/lindenmp/Google-Drive-Penn/work/research_projects/control_package/data'\n",
-    "resultsdir = '/Users/lindenmp/Google-Drive-Penn/work/research_projects/control_package/results'\n",
+    "datadir = '/Users/lindenmp/Google-Drive-Penn/work/research_projects/nctpy/data'\n",
+    "resultsdir = '/Users/lindenmp/Google-Drive-Penn/work/research_projects/nctpy/results'\n",
     "A_file = 'pnc_schaefer200_Am.npy'\n",
     "\n",
     "# load A matrix\n",
@@ -186,9 +186,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### You want to relax the constraints on $x$?\n",
+    "### You want to vary the constraints on $x$?\n",
     "\n",
-    "Note, constraints on $u$ cannot be change; the control signals are always minimized in the cost function"
+    "Note, constraints on $u$ cannot be change; the control signals are always minimized in the cost function.\n",
+    "The only thing that can be varied is the extent to which $x$ is constrained alongside $u$.\n",
+    "Reducing $rho$ below 1 increases the extent to which $x$ adds to the cost function alongside $u$.\n",
+    "Conversely, increasing $rho$ beyond 1 reduces the contribution of $x$, thus increasing the relative prioritization of $u$."
    ],
    "metadata": {
     "collapsed": false,
@@ -215,7 +218,42 @@
     "B = np.eye(n_nodes)  # uniform full control set\n",
     "T = 1  # time horizon\n",
     "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
-    "rho = 0.5  # x constrained less than u  <-- NOTE CHANGE.\n",
+    "rho = 0.5  # x constrained more than u  <-- NOTE CHANGE.\n",
+    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "\n",
+    "# get the state trajectory (x) and the control inputs (u)\n",
+    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
+    "node_energy = integrate_u(u)\n",
+    "energy = np.sum(node_energy)\n",
+    "\n",
+    "print('energy: {0:.2f}'.format(energy))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "energy: 2586.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "system = 'continuous'  # choose time system\n",
+    "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
+    "B = np.eye(n_nodes)  # uniform full control set\n",
+    "T = 1  # time horizon\n",
+    "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
+    "rho = 1.5  # x constrained less than u  <-- NOTE CHANGE.\n",
     "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
     "\n",
     "# get the state trajectory (x) and the control inputs (u)\n",
@@ -248,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -295,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -342,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
