update main functions and scripts to new repo name, nctpy

--- a/scripts/get_control_inputs.ipynb
+++ b/scripts/get_control_inputs.ipynb
@@ -17,9 +17,9 @@
     "plt.rcParams.update({'font.size': 10})\n",
     "plt.rcParams['svg.fonttype'] = 'none'\n",
     "\n",
-    "# import network_control functions\n",
-    "from network_control.energies import integrate_u, get_control_inputs\n",
-    "from network_control.utils import matrix_normalization, convert_states_str2int, normalize_state"
+    "# import nctpy functions\n",
+    "from nctpy.energies import integrate_u, get_control_inputs\n",
+    "from nctpy.utils import matrix_normalization, convert_states_str2int, normalize_state"
    ]
   },
   {
