updated google drive directory

--- a/scripts/path_a_control_energy_nonbinary.ipynb
+++ b/scripts/path_a_control_energy_nonbinary.ipynb
@@ -63,8 +63,8 @@
    "outputs": [],
    "source": [
     "# directory where data is stored\n",
-    "datadir = '/Users/lindenmp/Google-Drive-Penn/work/research_projects/nctpy/data'\n",
-    "resultsdir = '/Users/lindenmp/Google-Drive-Penn/work/research_projects/nctpy/results'\n",
+    "datadir = '/Users/lindenmp/Google-Drive-Rutgers/work/research_projects/nctpy/data'\n",
+    "resultsdir = '/Users/lindenmp/Google-Drive-Rutgers/work/research_projects/nctpy/results'\n",
     "A_file = 'pnc_schaefer200_Am.npy'\n",
     "rsts_file = 'pnc_schaefer200_rsts.npy'"
    ],
@@ -236,9 +236,9 @@
     "print(centroids.shape)\n",
     "\n",
     "# plot centroids on brain surface\n",
-    "lh_annot_file = '/Users/lindenmp/Google-Drive-Penn/work/research_projects/connectome_loader/data/schaefer_parc/' \\\n",
+    "lh_annot_file = '/Users/lindenmp/Google-Drive-Rutgers/work/research_projects/connectome_loader/data/schaefer_parc/' \\\n",
     "                'fsaverage5/lh.Schaefer2018_200Parcels_7Networks_order.annot'\n",
-    "rh_annot_file = '/Users/lindenmp/Google-Drive-Penn/work/research_projects/connectome_loader/data/schaefer_parc/' \\\n",
+    "rh_annot_file = '/Users/lindenmp/Google-Drive-Rutgers/work/research_projects/connectome_loader/data/schaefer_parc/' \\\n",
     "                'fsaverage5/rh.Schaefer2018_200Parcels_7Networks_order.annot'\n",
     "fsaverage = datasets.fetch_surf_fsaverage(mesh='fsaverage5')\n",
     "\n",
@@ -272,7 +272,14 @@
     "# extract visual cluster is initial state\n",
     "x0 = centroids[1, :]\n",
     "# extract default mode cluster as target state\n",
-    "xf = centroids[4, :]"
+    "xf = centroids[4, :]\n",
+    "\n",
+    "# # extract visual cluster is initial state\n",
+    "# x0 = centroids[1, :]\n",
+    "# # extract fp cluster as target state\n",
+    "# xf = centroids[2, :]\n",
+    "# # extract default mode cluster as reference state\n",
+    "# xr = centroids[4, :]"
    ],
    "metadata": {
     "collapsed": false,
@@ -288,7 +295,12 @@
    "source": [
     "# normalize state magnitude\n",
     "x0 = normalize_state(x0)\n",
-    "xf = normalize_state(xf)"
+    "xf = normalize_state(xf)\n",
+    "\n",
+    "# # normalize state magnitude\n",
+    "# x0 = normalize_state(x0)\n",
+    "# xf = normalize_state(xf)\n",
+    "# xr = normalize_state(xr)"
    ],
    "metadata": {
     "collapsed": false,
@@ -334,7 +346,9 @@
     "\n",
     "# get the state trajectory (x) and the control inputs (u)\n",
     "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf,\n",
-    "                                 system=system, rho=rho, S=S)"
+    "                                 system=system, rho=rho, S=S)\n",
+    "# x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf,\n",
+    "#                                  system=system, rho=rho, S=S, xr=xr)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -422,7 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2676.107391658496\n"
+      "2676.1073916584955\n"
      ]
     }
    ],
